correct general overflow-x on mobile

--- a/scss/base/_styles.scss
+++ b/scss/base/_styles.scss
@@ -10,6 +10,8 @@
   scroll-behavior: smooth;
 }
 
+html,
 body {
   @include text-font;
+  overflow-x: hidden;
 }
